# trinity-trends

./: .env.example  .gitignore  README.md  ig_auth.js  ig_auth_cdp.js  install.js  manifest.json  package-lock.json  package.json  test-reddit-gc.ts  test_dtsg.js  test_dtsg2.js  test_screenshot.js  test_trawl.js  tsconfig.json  uninstall.js  yt_dlp_meta_dump.json  yt_dlp_meta_dump_pretty.json
dist_release/: manifest.json
dist_release/trinity-trends-v0.1.1/pipeline/: config.py  models.py  orchestrator.py  pyproject.toml  runner.py
dist_release/trinity-trends-v0.1.1/pipeline/stages/: s0_normalize.py  s1_relevance.py  s2_rerank.py  s3_dedup.py  s4_cluster.py  s5_extract.py  s6_merge.py  s8_compress.py  s9_synthesize.py
dist_release/trinity-trends-v0.1.1/pipeline/storage/: lance_client.py  sqlite_client.py
docs/: DB.md  ERD.md  Folder Structure.md  HLA.md  Interface Specification.md  SRS.md  architecture.md  current_design.md  design-decisions.md  pipeline.md  platforms.md  roadmap.md
ig_scraper/: .env.example  .gitignore  __init__.py  agent.py  agent_browser.py  captcha_vision.py  config.json  constants.py  main.py  readme.md  requirements.txt  results.py  scraper.py  transcribe.py
output/: reddit-collect.json  reddit-search.json  (+2 more)
pipeline/: config.py  models.py  orchestrator.py  pyproject.toml  run.py  runner.py
pipeline/stages/: __init__.py  s0_normalize.py  s1_relevance.py  s2_rerank.py  s3_dedup.py  s4_cluster.py  s5_extract.py  s6_merge.py  s7_score.py  s8_compress.py  s9_synthesize.py
pipeline/storage/: __init__.py  lance_client.py  sqlite_client.py
(+101 files in other folders)
